Fix page beeing too wide

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -17,7 +17,7 @@
 
 .technical-container {
   height: 20vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
