--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,4 +4,5 @@ body {
   font-family: "Roboto", "Monospace", sans-serif;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  max-width: 100vw;
 }
